testsuite/tests/safeHaskell/safeInfered/UnsafeInfered06.stderr
[1 of 2] Compiling UnsafeInfered06_A (.hs -> .o)
[2 of 2] Compiling UnsafeInfered06  (.hs -> .o)

UnsafeInfered06.hs:4:1: error:
    UnsafeInfered06_A: Can't be safely imported!
    The module itself isn't safe.
